# FlightBuddyPro

./: .replit  pyproject.toml  replit.md
FlightBuddyPro/: package.json
client/src/: index.css
client/src/components/: branding-section.tsx  flight-booking-form.tsx  flight-segments-fixed.tsx  flight-segments-redesign.tsx  flight-segments-section.tsx  passengers-redesign.tsx  pdf-generator.tsx  personal-info-redesign.tsx
client/src/lib/: clean-pdf.ts  pdf-utils.ts  simple-pdf.ts  working-pdf.ts
client/src/pages/: flight-booking.tsx
python-flight-booking/: README.md  app.py  models.py  pdf_generator.py  requirements.txt
python-flight-booking-redesign/: app.py
python-flight-booking-redesign/templates/: index.html
python-flight-booking/static/: style.css
python-flight-booking/templates/: index.html
server/: storage.ts
shared/: schema.ts
