[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "jinja2>=3.1.6",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.2",
    "werkzeug>=3.1.3",
]
